01-05-2023, added img and adjusted colors.

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -17,15 +17,15 @@
 				<ul class="listHeader flexJustifyCenter">
 					<li><a href="#">Menu</a></li>
 					<li><a href="#">Location</a></li>
-					<li class="logoHomeHeader"><a href="#"><img src="" alt="Home Logo"></a></li>
+					<li class="logoHomeHeader"><a href="#"><img class='img-MiniLogo' src="img/Logo/Mini-Logo_ Café Boulange.png" alt="Home Logo"></a></li>
 					<li><a href="#">contact</a></li>
 					<li><a href="#">order</a></li>
 				</ul>
 			</nav>
-		</header>
+		</header> 
 		<main>
 			<section class="width100 logoSection flexJustifyCenter">
-				<img src="" alt="Main Logo">
+				<img src="img/Logo/Logo_ Café Boulange.png" alt="Main Logo">
 				<ul>
 					<li><span>8pm to 7pm</span></li>
 					<li><span>Monday to Friday</span></li>
