new html, worked on some css, redid header

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -12,111 +12,146 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<header class="width100 backroundC01">
-			<nav class="width100">
-				<ul class="listHeader flexJustifyCenter">
-					<li><a href="#">Menu</a></li>
-					<li><a href="#">Location</a></li>
-					<li class="logoHomeHeader"><a href="#"><img class='img-MiniLogo' src="img/Logo/Mini-Logo_ Café Boulange.png" alt="Home Logo"></a></li>
-					<li><a href="#">contact</a></li>
-					<li><a href="#">order</a></li>
+		<header class="width100 mainColor01">
+			<nav class="height100 flexRow">
+				<ul class="height100 flexRow">
+					<li><a href="">Location</a></li>
+					<li><a href="">Menu</a></li>
+					<li><a href="">About Us</a></li>
+				</ul>
+					<a href=""><img src="img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
+				<ul class="height100 flexRow">
+					<li>
+						<ul class="flexRow">
+							<li><a href=""><img src="img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
+							<li><a href=""><img src="img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
+							<li><a href=""><img src="img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
+						</ul>
+					</li>
+					<li><a href="">Order</a></li>
+					<li><a href="">Hiring</a></li>
 				</ul>
 			</nav>
-		</header> 
+		</header>
 		<main>
-			<section class="width100 logoSection flexJustifyCenter">
-				<img src="img/Logo/Logo_ Café Boulange.png" alt="Main Logo">
-				<ul>
-					<li><span>8pm to 7pm</span></li>
-					<li><span>Monday to Friday</span></li>
-					<li><span>9pm to 8pm</span></li>
-					<li><span>Firday to Sunday</span></li>
-				</ul>
+			<section class="LogoHomePage">
+				<img src="img/design_logos/Main-Logo.svg" alt="Cafe Boulange">
 			</section>
-			<section class="width100 locationSection flexJustifyCenter">
-				<div class="headingDisplay backroundC01 width100">
-					<h2 class="headingTittle flexJustifyCenter">Find us</h2>
-				</div>
-				<div class="locationInfo backroundC01 width100">
-					<img src="#" alt="map"><!--figure out how to place google maps in here-->
-					<ul>
-						<li><span>1000 bread ave, Tetruce, QC, Canada</span></li>
-						<li><span>phone number: 4163-5333-24423</span></li>
-						<li><span>Email: breadyCoffee@thecoff.com</span></li>
-						<li><span>Hours: monday to thursday 12pm to 8 pm</span></li>
-						<li><img src="#" alt="Photo of front of store"></li>
-					</ul>
-				</div>
-			</section>
-			<section class="width100 backround02 flexJustifyCenter menuDisplay">
-				<div class="headingDisplay width100">
-					<h2 class="headingTittle">Our specialty</h2>
-				</div>
-				<menu>
-					<ul  class="menuTypeSelection">
-						<li><h3>Cookie</h3></li>
-						<li><h3>Pastry</h3></li>
-						<li><h3>Coffee</h3></li>
-					</ul>
-				</menu>
-				<section class="menuList flexJustifyCenter">
-					<div class="productContainer">
-						<ul>
-							<li><h4>some bread thing</h4></li>
-							<li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ab nulla voluptate esse id ipsum.</p></li>
-							<li><img src="" alt="of item"></li>
-						</ul>
-					</div>
-					<div class="productContainer">
-						<ul>
-							<li><h4>some bread thing</h4></li>
-							<li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ab nulla voluptate esse id ipsum.</p></li>
-							<li><img src="" alt="of item"></li>
-						</ul>
-					</div>
-					<div class="productContainer">
-						<ul>
-							<li><h4>some bread thing</h4></li>
-							<li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ab nulla voluptate esse id ipsum.</p></li>
-							<li><img src="" alt="of item"></li>
-						</ul>
-					</div>
-					<div class="productContainer">
-						<ul>
-							<li><h4>some bread thing</h4></li>
-							<li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ab nulla voluptate esse id ipsum.</p></li>
-							<li><img src="" alt="of item"></li>
-						</ul>
-					</div>
-					<div class="productContainer">
-						<ul>
-							<li><h4>some bread thing</h4></li>
-							<li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ab nulla voluptate esse id ipsum.</p></li>
-							<li><img src="" alt="of item"></li>
-						</ul>
-					</div>
-					<div class="productContainer">
-						<ul>
-							<li><h4>some bread thing</h4></li>
-							<li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ab nulla voluptate esse id ipsum.</p></li>
-							<li><img src="" alt="of item"></li>
-						</ul>
-					</div>
-					<a class="additionalMenuLink" href="">More...</a>
+			<section class="aboutUs">
+				<h3>About Us And What We Love</h3>
+				<section>
+					<img src="img/About Us_Founders .png" alt="The two owners smilling">
+					<article class="aboutUsParagraph">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
+						</p>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
+						</p>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam.
+						</p>
+					</article>
 				</section>
 			</section>
+			<section>
+				<h3>Come Visit</h3>
+				<section>
+					<div>
+						<h4>Our hours</h4>
+						<ul>
+							<li>Monday 7:00 am to 6:00pm</li>
+							<li>Tuesday 7:00 am to 6:00pm</li>
+							<li>Wensday 7:00 am to 6:00pm</li>
+							<li>Thursday 7:00 am to 7:00pm</li>
+							<li>Friday 7:00 am to 6:00pm</li>
+							<li>Saturday 8:00 am to 7:00pm</li>
+							<li>Sunday 8:00 am to 7:00pm</li>
+						</ul>
+					</div>
+					<div>
+						<h4>Location and contact info</h4>
+						<ul>
+							<li>100 coffee town, ON, Coffee country, 1C3 C1F</li>
+							<li>Phone: 4111-6666-6666</li>
+							<li>Email :  cafeBoulange@coffee.come</li>
+							<li>
+								<ul>
+									<li><a href=""><img src="img/design_logos/Icon-Insta White.svg" alt="Our InstaGram"></a></li>
+									<li><a href=""><img src="img/design_logos/Icon-Twitter White.svg" alt="Our Twitter"></a></li>
+									<li><a href=""><img src="img/design_logos/Icon-Facebook white.svg" alt="Our Facebook"></a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</section>
+			</section>
+			<section>
+				<h3>Our Goods</h3>
+				<section>
+					<ul>
+						<li><a href="">Pastry</a></li>
+						<li><a href="">Cookies</a></li>
+						<li><a href="">Coffee</a></li>
+					</ul>
+					<ul>
+						<li>
+							<h4>Pastry 01</h4>
+							<span>5$</span>
+						</li>
+						<li>
+							<h4>Pastry 02</h4>
+							<span>10$</span>
+						</li>
+						<li>
+							<h4>Pastry 03</h4>
+							<span>7$</span>
+						</li>
+						<li>
+							<h4>Pastry 04</h4>
+							<span>5$</span>
+						</li>
+						<li>
+							<h4>Pastry 05</h4>
+							<span>5$</span>
+						</li>
+						<li>
+							<h4>Pastry 06</h4>
+							<span>15$</span>
+						</li>
+					</ul>
+				</section>
+			</section>
+			<footer>
+				<div>
+					<h4>Location and contact info</h4>
+					<ul>
+						<li>100 coffee town, ON, Coffee country, 1C3 C1F</li>
+						<li>Phone: 4111-6666-6666</li>
+						<li>Email :  cafeBoulange@coffee.come</li>
+						<li>
+							<ul>
+								<li><a href=""><img src="img/design_logos/Icon-Insta White.svg" alt="Our InstaGram"></a></li>
+								<li><a href=""><img src="img/design_logos/Icon-Twitter White.svg" alt="Our Twitter"></a></li>
+								<li><a href=""><img src="img/design_logos/Icon-Facebook white.svg" alt="Our Facebook"></a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+				<div>
+					<h4>Our hours</h4>
+					<ul>
+						<li>Monday 7:00 am to 6:00pm</li>
+						<li>Tuesday 7:00 am to 6:00pm</li>
+						<li>Wensday 7:00 am to 6:00pm</li>
+						<li>Thursday 7:00 am to 7:00pm</li>
+						<li>Friday 7:00 am to 6:00pm</li>
+						<li>Saturday 8:00 am to 7:00pm</li>
+						<li>Sunday 8:00 am to 7:00pm</li>
+					</ul>
+				</div>
+			</footer>
 		</main>
-		<footer class="width100">
-			<section class="alignLeft">
-				<span>phone number: 4163-5333-24423</span>
-				<span></span>Email: breadyCoffee@thecoff.com
-			</section>
-			<section class="alignRight">
-				<span>Hours: monday to thursday 12pm to 8 pm</span>
-				<span>1000 bread ave, Tetruce, QC, Canada</span>
-			</section>
-		</footer>
-
-		<script type="text/javascript" src="js/main.js"></script>
+			<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
