new content on homepage

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<header class="width100 mainColor01">
-			<nav class="height100 flexRow">
+			<nav class="height100 flexRow brownText">
 				<ul class="height100 flexRow">
 					<li><a href="">Location</a></li>
 					<li><a href="">Menu</a></li>
@@ -22,7 +22,7 @@
 					<a href=""><img src="img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
 				<ul class="height100 flexRow">
 					<li>
-						<ul class="flexRow">
+						<ul class="flexRow socialIcons">
 							<li><a href=""><img src="img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
 							<li><a href=""><img src="img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
 							<li><a href=""><img src="img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
@@ -34,32 +34,34 @@
 			</nav>
 		</header>
 		<main>
-			<section class="LogoHomePage">
+			<section class="LogoHomeSection flexRow">
 				<img src="img/design_logos/Main-Logo.svg" alt="Cafe Boulange">
 			</section>
-			<section class="aboutUs">
-				<h3>About Us And What We Love</h3>
-				<section>
-					<img src="img/About Us_Founders .png" alt="The two owners smilling">
-					<article class="aboutUsParagraph">
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
-						</p>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
-						</p>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam.
-						</p>
-					</article>
+			<div class="mainColor01 aboutUsStylingBorder">
+				<section class="flexColumn mainColor01 AboutUsSection mainColor02 whiteText">
+					<h3>About Us And What We Love</h3>
+					<section class="flexRow aboutUs">
+						<img src="img/About Us_Founders .png" alt="The two owners smilling">
+						<section class="">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
+							</p>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
+							</p>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam.
+							</p>
+						</section>
+					</section>
 				</section>
-			</section>
-			<section>
+			</div>
+			<section class="flexColumn comeVisitSection whiteText">
 				<h3>Come Visit</h3>
-				<section>
-					<div>
+				<section class="flexRow comeVisitDetails width100 height100">
+					<div class="flexColumn">
 						<h4>Our hours</h4>
-						<ul>
+						<ul class="flexColumn">
 							<li>Monday 7:00 am to 6:00pm</li>
 							<li>Tuesday 7:00 am to 6:00pm</li>
 							<li>Wensday 7:00 am to 6:00pm</li>
@@ -69,14 +71,14 @@
 							<li>Sunday 8:00 am to 7:00pm</li>
 						</ul>
 					</div>
-					<div>
+					<div class="flexColumn">
 						<h4>Location and contact info</h4>
-						<ul>
+						<ul class="flexColumn alignTextLeft">
 							<li>100 coffee town, ON, Coffee country, 1C3 C1F</li>
 							<li>Phone: 4111-6666-6666</li>
 							<li>Email :  cafeBoulange@coffee.come</li>
 							<li>
-								<ul>
+								<ul class="flexRow socialIcons">
 									<li><a href=""><img src="img/design_logos/Icon-Insta White.svg" alt="Our InstaGram"></a></li>
 									<li><a href=""><img src="img/design_logos/Icon-Twitter White.svg" alt="Our Twitter"></a></li>
 									<li><a href=""><img src="img/design_logos/Icon-Facebook white.svg" alt="Our Facebook"></a></li>
@@ -86,15 +88,17 @@
 					</div>
 				</section>
 			</section>
-			<section>
+			<section class="mainColor01 flexColumn ourGoodsSection">
 				<h3>Our Goods</h3>
 				<section>
-					<ul>
-						<li><a href="">Pastry</a></li>
-						<li><a href="">Cookies</a></li>
-						<li><a href="">Coffee</a></li>
-					</ul>
-					<ul>
+					<nav>
+						<ul class="flexRow">
+							<li><a href="">Pastry</a></li>
+							<li><a href="">Cookies</a></li>
+							<li><a href="">Coffee</a></li>
+						</ul>
+					</nav>
+					<ul class="flexRow">
 						<li>
 							<h4>Pastry 01</h4>
 							<span>5$</span>
