rough layout of Our Goods section

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -88,17 +88,17 @@
 					</div>
 				</section>
 			</section>
-			<section class="mainColor01 flexColumn ourGoodsSection">
-				<h3>Our Goods</h3>
-				<section>
+			<section class="mainColor01 flexColumn ourGoodsSection whiteText">
+				<h2 class="mainColor02 width100">Our Goods</h2>
+				<section class="width100">
 					<nav>
-						<ul class="flexRow">
-							<li><a href="">Pastry</a></li>
-							<li><a href="">Cookies</a></li>
-							<li><a href="">Coffee</a></li>
+						<ul class="flexRow menuCategorySelection brownText">
+							<li><a  class="subtitle-sm" href="">Pastry</a></li>
+							<li><a  class="subtitle-sm" href="">Cookies</a></li>
+							<li><a  class="subtitle-sm" href="">Coffee</a></li>
 						</ul>
 					</nav>
-					<ul class="flexRow">
+					<ul class="flexRow menuOptions">
 						<li>
 							<h4>Pastry 01</h4>
 							<span>5$</span>
