added footer, adjusted some spacing. Need to fix sizing of the site

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -126,15 +126,15 @@
 					</ul>
 				</section>
 			</section>
-			<footer>
-				<div>
+			<footer class="width100 focusColor whiteText flexRow footerSection">
+				<div class="flexColumn height100">
 					<h4>Location and contact info</h4>
 					<ul>
-						<li>100 coffee town, ON, Coffee country, 1C3 C1F</li>
 						<li>Phone: 4111-6666-6666</li>
 						<li>Email :  cafeBoulange@coffee.come</li>
+						<li>100 coffee town, ON, Coffee country, 1C3 C1F</li>
 						<li>
-							<ul>
+							<ul class="flexRow socialIcons">
 								<li><a href=""><img src="img/design_logos/Icon-Insta White.svg" alt="Our InstaGram"></a></li>
 								<li><a href=""><img src="img/design_logos/Icon-Twitter White.svg" alt="Our Twitter"></a></li>
 								<li><a href=""><img src="img/design_logos/Icon-Facebook white.svg" alt="Our Facebook"></a></li>
@@ -142,7 +142,7 @@
 						</li>
 					</ul>
 				</div>
-				<div>
+				<div class="aligTextRight">
 					<h4>Our hours</h4>
 					<ul>
 						<li>Monday 7:00 am to 6:00pm</li>
