fix positioning and sizing of sections. Added bg imgs

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -7,11 +7,13 @@
 
 		<title>Bakery-Caffe</title>
 
+		<meta name ="viewport" content="with=device-width, initial-scale=1.0"><!--added this not sure what it does-->
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<div class="bgImg">
 		<header class="width100 mainColor01">
 			<nav class="height100 flexRow brownText">
 				<ul class="height100 flexRow">
@@ -19,13 +21,13 @@
 					<li><a href="">Menu</a></li>
 					<li><a href="">About Us</a></li>
 				</ul>
-					<a href=""><img src="img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
+					<a href=""><img src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
 				<ul class="height100 flexRow">
 					<li>
 						<ul class="flexRow socialIcons">
-							<li><a href=""><img src="img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
-							<li><a href=""><img src="img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
-							<li><a href=""><img src="img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
+							<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
+							<li><a href=""><img src="css/assets/img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
+							<li><a href=""><img src="css/assets/img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
 						</ul>
 					</li>
 					<li><a href="">Order</a></li>
@@ -34,60 +36,63 @@
 			</nav>
 		</header>
 		<main>
-			<section class="LogoHomeSection flexRow">
-				<img src="img/design_logos/Main-Logo.svg" alt="Cafe Boulange">
-			</section>
-			<div class="mainColor01 aboutUsStylingBorder">
-				<section class="flexColumn mainColor01 AboutUsSection mainColor02 whiteText">
-					<h3>About Us And What We Love</h3>
-					<section class="flexRow aboutUs">
-						<img src="img/About Us_Founders .png" alt="The two owners smilling">
-						<section class="">
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
-							</p>
-							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
-							</p>
-							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam.
-							</p>
+				<section class="LogoHomeSection flexRow">
+					<img src="css/assets/img/design_logos/Main-Logo.svg" alt="Cafe Boulange">
+				</section>
+				<div class="mainColor01 aboutUsStylingBorder">
+					<section class="flexColumn mainColor01 AboutUsSection mainColor02 whiteText">
+						<h3>About Us And What We Love</h3>
+						<section class="flexRow aboutUs">
+							<img src="css/assets/img/About Us_Founders .png" alt="The two owners smilling">
+							<section class="flexColumn aboutUsText">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
+								</p>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
+								</p>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam.
+								</p>
+							</section>
 						</section>
 					</section>
-				</section>
-			</div>
-			<section class="flexColumn comeVisitSection whiteText">
-				<h3>Come Visit</h3>
-				<section class="flexRow comeVisitDetails width100 height100">
-					<div class="flexColumn">
-						<h4>Our hours</h4>
-						<ul class="flexColumn">
-							<li>Monday 7:00 am to 6:00pm</li>
-							<li>Tuesday 7:00 am to 6:00pm</li>
-							<li>Wensday 7:00 am to 6:00pm</li>
-							<li>Thursday 7:00 am to 7:00pm</li>
-							<li>Friday 7:00 am to 6:00pm</li>
-							<li>Saturday 8:00 am to 7:00pm</li>
-							<li>Sunday 8:00 am to 7:00pm</li>
-						</ul>
-					</div>
-					<div class="flexColumn">
-						<h4>Location and contact info</h4>
-						<ul class="flexColumn alignTextLeft">
-							<li>100 coffee town, ON, Coffee country, 1C3 C1F</li>
-							<li>Phone: 4111-6666-6666</li>
-							<li>Email :  cafeBoulange@coffee.come</li>
-							<li>
-								<ul class="flexRow socialIcons">
-									<li><a href=""><img src="img/design_logos/Icon-Insta White.svg" alt="Our InstaGram"></a></li>
-									<li><a href=""><img src="img/design_logos/Icon-Twitter White.svg" alt="Our Twitter"></a></li>
-									<li><a href=""><img src="img/design_logos/Icon-Facebook white.svg" alt="Our Facebook"></a></li>
+				</div>
+			</div >
+				<div class="bgImg02">
+					<section class="flexColumn comeVisitSection whiteText">
+						<h3>Come Visit</h3>
+						<section class="flexRow comeVisitDetails width100 height100">
+							<div class="flexColumn">
+								<h4>Our hours</h4>
+								<ul class="flexColumn">
+									<li>Monday 7:00 am to 6:00pm</li>
+									<li>Tuesday 7:00 am to 6:00pm</li>
+									<li>Wensday 7:00 am to 6:00pm</li>
+									<li>Thursday 7:00 am to 7:00pm</li>
+									<li>Friday 7:00 am to 6:00pm</li>
+									<li>Saturday 8:00 am to 7:00pm</li>
+									<li>Sunday 8:00 am to 7:00pm</li>
 								</ul>
-							</li>
-						</ul>
-					</div>
-				</section>
-			</section>
+							</div>
+							<div class="flexColumn">
+								<h4>Location and contact info</h4>
+								<ul class="flexColumn alignTextLeft">
+									<li>100 coffee town, ON, Coffee country, 1C3 C1F</li>
+									<li>Phone: 4111-6666-6666</li>
+									<li>Email :  cafeBoulange@coffee.come</li>
+									<li>
+										<ul class="flexRow socialIcons">
+											<li><a href=""><img src="css/assets/img/design_logos/Icon-Insta 	White.svg" alt="Our InstaGram"></a></li>
+											<li><a href=""><img src="css/assets/img/design_logos/Icon-Twitter 	White.svg" alt="Our Twitter"></a></li>
+											<li><a href=""><img src="css/assets/img/design_logos/	Icon-Facebook white.svg" alt="Our Facebook"></a></li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+						</section>
+					</section>
+				</div>
 			<section class="mainColor01 flexColumn ourGoodsSection whiteText">
 				<h2 class="mainColor02 width100">Our Goods</h2>
 				<section class="width100">
@@ -135,9 +140,9 @@
 						<li>100 coffee town, ON, Coffee country, 1C3 C1F</li>
 						<li>
 							<ul class="flexRow socialIcons">
-								<li><a href=""><img src="img/design_logos/Icon-Insta White.svg" alt="Our InstaGram"></a></li>
-								<li><a href=""><img src="img/design_logos/Icon-Twitter White.svg" alt="Our Twitter"></a></li>
-								<li><a href=""><img src="img/design_logos/Icon-Facebook white.svg" alt="Our Facebook"></a></li>
+								<li><a href=""><img src="css/assets/img/design_logos/Icon-Insta White.svg" alt="Our InstaGram"></a></li>
+								<li><a href=""><img src="css/assets/img/design_logos/Icon-Twitter White.svg" alt="Our Twitter"></a></li>
+								<li><a href=""><img src="css/assets/img/design_logos/Icon-Facebook white.svg" alt="Our Facebook"></a></li>
 							</ul>
 						</li>
 					</ul>
