adjusted fonts for responsiveness and started looking into js dom manipulation

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -21,7 +21,7 @@
 					<li><a href="">Menu</a></li>
 					<li><a href="">About Us</a></li>
 				</ul>
-					<a href=""><img src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
+					<a href=""><img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
 				<ul class="height100 flexRow">
 					<li>
 						<ul class="flexRow socialIcons">
