New Menu Page Design

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -16,7 +16,7 @@
 		<div class="bgImg">
 		<header class="width100 mainColor01">
 			<nav class="height100 flexRow brownText">
-				<ul class="height100 flexRow">
+				<ul class="height100 flexRow hoverGlow">
 					<li><a href="">Location</a></li>
 					<li><a href="">Menu</a></li>
 					<li><a href="">About Us</a></li>
