--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -13,28 +13,28 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div class="bgImg">
-		<header class="width100 mainColor01">
-			<nav class="height100 flexRow brownText">
-				<ul class="height100 flexRow hoverGlow">
-					<li><a href="">Location</a></li>
-					<li><a href="">Menu</a></li>
-					<li><a href="">About Us</a></li>
-				</ul>
-					<a href=""><img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
-				<ul class="height100 flexRow">
-					<li>
-						<ul class="flexRow socialIcons">
-							<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
-							<li><a href=""><img src="css/assets/img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
-							<li><a href=""><img src="css/assets/img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
-						</ul>
-					</li>
-					<li><a href="">Order</a></li>
-					<li><a href="">Hiring</a></li>
-				</ul>
-			</nav>
-		</header>
+		<div class="bgImg" id="parallax">
+			<header class="width100 mainColor01">
+				<nav class="height100 flexRow brownText">
+					<ul class="height100 flexRow hoverGlow">
+						<li><a href="">Location</a></li>
+						<li><a href="">Menu</a></li>
+						<li><a href="">About Us</a></li>
+					</ul>
+						<a href=""><img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
+					<ul class="height100 flexRow">
+						<li>
+							<ul class="flexRow socialIcons">
+								<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
+								<li><a href=""><img src="css/assets/img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
+								<li><a href=""><img src="css/assets/img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
+							</ul>
+						</li>
+						<li><a href="">Order</a></li>
+						<li><a href="">Hiring</a></li>
+					</ul>
+				</nav>
+			</header>
 		<main>
 				<section class="LogoHomeSection flexRow">
 					<img src="css/assets/img/design_logos/Main-Logo.svg" alt="Cafe Boulange">
@@ -59,7 +59,7 @@
 					</section>
 				</div>
 			</div >
-				<div class="bgImg02">
+				<div class="bgImg02" id="parallax02">
 					<section class="flexColumn comeVisitSection whiteText">
 						<h3>Come Visit</h3>
 						<section class="flexRow comeVisitDetails width100 height100">
