Add: Contact Us nav element in the header and adjust element positioning

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -18,19 +18,20 @@
 				<nav class="height100 flexRow brownText">
 					<ul class="height100 flexRow hoverGlow">
 						<li><a href="">Location</a></li>
+						<li><a href="">Menu</a></li>
 						<li><a href="">About Us</a></li>
 					</ul>
 						<a href=""><img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
-					<ul class="height100 flexRow">
+					<ul class="height100 flexRow alignGroupRight">
+						<li><a href="">Contact Us</a></li>
+						<li><a href="">Hiring</a></li>
 						<li>
-							<ul class="flexRow socialIcons">
+							<ul class="flexRow socialIcons ">
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
 							</ul>
 						</li>
-						<li><a href="">Menu</a></li>
-						<li><a href="">Hiring</a></li>
 					</ul>
 				</nav>
 			</header>
