Add: pastry img of pastries for the our Goods section

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -45,7 +45,8 @@
 						<section class="flexRow aboutUs">
 							<img src="css/assets/img/About Us_Founders .png" alt="The two owners smilling">
 							<section class="flexColumn aboutUsText">
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
 								</p>
 								<p>
 									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
@@ -107,26 +108,32 @@
 						<li>
 							<h4>Pastry 01</h4>
 							<span>5$</span>
+							<img src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
 						</li>
 						<li>
 							<h4>Pastry 02</h4>
 							<span>10$</span>
+							<img src="css/assets/img/bake good 2.png" alt="Fresh Pastry 02">
 						</li>
 						<li>
 							<h4>Pastry 03</h4>
 							<span>7$</span>
+							<img src="css/assets/img/bake good 3.png" alt="Fresh Pastry 03">
 						</li>
 						<li>
 							<h4>Pastry 04</h4>
 							<span>5$</span>
+							<img src="css/assets/img/bake good 4.png" alt="Fresh Pastry 04">
 						</li>
 						<li>
 							<h4>Pastry 05</h4>
 							<span>5$</span>
+							<img src="css/assets/img/bake good 5.png" alt="Fresh Pastry 05">
 						</li>
 						<li>
 							<h4>Pastry 06</h4>
 							<span>15$</span>
+							<img src="css/assets/img/bake good 6.png" alt="Fresh Pastry 06">
 						</li>
 					</ul>
 				</section>
