Style: made pastry for sale img in Our Goods section be in teh background of the li element

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -105,35 +105,47 @@
 						</ul>
 					</nav>
 					<ul class="flexRow menuOptions">
-						<li>
-							<h4>Pastry 01</h4>
-							<span>5$</span>
-							<img src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
+						<li >
+							<div>
+								<h4>Pastry 01</h4>
+								<span>5$</span>
+							</div>
+							<img aria-label="role=img" src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
 						</li>
 						<li>
-							<h4>Pastry 02</h4>
-							<span>10$</span>
+							<div>
+								<h4>Pastry 02</h4>
+								<span>10$</span>
+							</div>
 							<img src="css/assets/img/bake good 2.png" alt="Fresh Pastry 02">
 						</li>
 						<li>
-							<h4>Pastry 03</h4>
-							<span>7$</span>
+							<div>
+								<h4>Pastry 03</h4>
+								<span>7$</span>
+							</div>
 							<img src="css/assets/img/bake good 3.png" alt="Fresh Pastry 03">
 						</li>
 						<li>
-							<h4>Pastry 04</h4>
-							<span>5$</span>
+							<div>
+								<h4>Pastry 04</h4>
+								<span>5$</span>
+							</div>
 							<img src="css/assets/img/bake good 4.png" alt="Fresh Pastry 04">
 						</li>
 						<li>
-							<h4>Pastry 05</h4>
-							<span>5$</span>
+							<div>
+								<h4>Pastry 05</h4>
+								<span>5$</span>
+							</div>
 							<img src="css/assets/img/bake good 5.png" alt="Fresh Pastry 05">
 						</li>
 						<li>
-							<h4>Pastry 06</h4>
-							<span>15$</span>
-							<img src="css/assets/img/bake good 6.png" alt="Fresh Pastry 06">
+							<div>
+								<h4>Pastry 06</h4>
+								<span>15$</span>
+							</div>
+							<img src="css/assets/img/bake good 6.png" alt="Fresh Pastry 0">
 						</li>
 					</ul>
 				</section>
