Add: hoever over nav bar options results in an underline to appear

--- a/Coffee_Backery/Coffee_backery_Code/index.html
+++ b/Coffee_Backery/Coffee_backery_Code/index.html
@@ -16,15 +16,15 @@
 		<div class="bgImg" id="parallax">
 			<header class="width100 mainColor01">
 				<nav class="height100 flexRow brownText">
-					<ul class="height100 flexRow hoverGlow">
-						<li><a href="">Location</a></li>
-						<li><a href="">Menu</a></li>
-						<li><a href="">About Us</a></li>
+					<ul class="height100 flexRow">
+						<li class="hoverGlow"><a href="">Location</a></li>
+						<li class="hoverGlow"><a href="">Menu</a></li>
+						<li class="hoverGlow"><a href="">About Us</a></li>
 					</ul>
 						<a href=""><img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
 					<ul class="height100 flexRow alignGroupRight">
-						<li><a href="">Contact Us</a></li>
-						<li><a href="">Hiring</a></li>
+						<li class="hoverGlow"><a href="">Contact Us</a></li>
+						<li class="hoverGlow"><a href="">Hiring</a></li>
 						<li>
 							<ul class="flexRow socialIcons ">
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
