Add: our goods underline effect grow

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -99,9 +99,9 @@
 				<section class="width100">
 					<nav>
 						<ul class="flexRow menuCategorySelection brownText">
-							<li><a  class="subtitle-sm" href="">Pastry</a></li>
-							<li><a  class="subtitle-sm" href="">Cookies</a></li>
-							<li><a  class="subtitle-sm" href="">Coffee</a></li>
+							<li class=" menuGlow"><a  class="subtitle-sm" href="">Pastry</a></li>
+							<li class=" menuGlow"><a  class="subtitle-sm" href="">Cookies</a></li>
+							<li class=" menuGlow"><a  class="subtitle-sm" href="">Coffee</a></li>
 						</ul>
 					</nav>
 					<ul class="flexRow menuOptions">
